# kingom

./: .gitignore  CMakeLists.txt  README.md
assets/: albedo.frag  albedo.vert  codeScreen.frag  codeScreen.vert
examples/pong/: CMakeLists.txt
src/: main.cc
src/engine/: callback.hh  engine.hh  memory.hh  stb_image.cc  stb_image.hh
src/engine/buffer/: layout.cc  layout.hh  vattribute.hh
src/engine/buffers/: buffer.cc  buffer.hh  layout.cc  layout.hh  vattribute.hh
src/engine/geometry/: material.cc  material.hh  mesh.cc  mesh.hh  texture.cc  texture.hh
src/engine/input/: input.cc  input.hh  keycode.hh
src/engine/internal/: buffer.cc  buffer.hh  callback.hh
src/engine/object/: camera.cc  camera.hh  material.hh  texture.cc  texture.hh
src/engine/rendering/: pipeline.hh  renderer.cc  renderer.hh  shader.cc  shader.hh
src/engine/window/: window.cc  window.hh  window_desc.cc  window_desc.hh
src/graphics/: callback.hh  renderer.cc  renderer.hh  shader.cc
src/graphics/rendering/: renderer.cc  shader.cc  shader.hh
src/graphics/window/: window.cc  window.hh  window_desc.cc  window_desc.hh
src/util/: result.hh
